--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,10 +1,10 @@
-basemap==1.4.1
-basemap_data==1.3.2
-Cartopy==0.23.0
-matplotlib==3.8.4
-numpy==2.0.0
-pandas==2.2.2
-pvlib==0.10.5
-pytz==2024.1
-timezonefinder==6.5.2
-tkintermapview==1.29
+basemap
+basemap_data
+Cartopy
+matplotlib
+numpy
+pandas
+pvlib
+pytz
+timezonefinder
+tkintermapview
