More bug fixing + TLE import option added

--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,10 +1,15 @@
 basemap
 basemap_data
 Cartopy
+geopandas
+geopy
 matplotlib
 numpy
 pandas
 pvlib
 pytz
+satellitetle
 timezonefinder
+tkcalendar
+tkinter_tooltip
 tkintermapview
